// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      nice game 
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hgBmRc ixNCbK"
    >
      * 
    </span>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos sc-fjiIYv gRtoKp bKwzte"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-fSZZvL sc-lgxhsK eUyizz kMNCTo"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      hey
       
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      hey
       
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt jKARQR"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      Hey
       
      <span
        class="sc-kubIlH eRNhvz sc-ASOre lffinA"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gYEWkn cpdeGM"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG gtOLJR"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG gtOLJR"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG gtOLJR"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-IAGWt chmkvW"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ZGwKq fbHbuv sc-ciUawz hnNrKp"
      tabindex="0"
    >
      <span
        class="sc-igiyQO kFLQDD"
      >
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gerFA fisMLh"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kubIlH eRNhvz sc-hQsDos gRtoKp"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gYEWkn cpdeGM"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gerFA fisMLh"
    >
      : 
    </i>
    <span
      class="sc-fSZZvL eUyizz"
    >
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ZGwKq fbHbuv sc-fylCKh flRTzR"
        tabindex="-1"
      >
        <span
          class="sc-bGxLfG fVtgOC"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
